implement try with resources to ensure readers are closed